# python-package-snowwhite

./: .gitignore  CMakeLists.txt  Contributing.md  LICENSE  README.md  __init__.py  batchmddftsolver.py  dftsolver.py  hockneysolver.py  mddftsolver.py  mdprdftsolver.py  mdrconvsolver.py  mdrfsconvsolver.py  metadata.py  poissonsolver.py  prdftsolver.py  spiral.py  stepphasesolver.py  swsolver.py
examples/: print-metadata.py  run-batchdft.py  run-batchmddft.py  run-dft.py  run-hockney130.py  run-hockney8.py  run-mddft.py  run-mdprdft.py  run-mdrconv.py  run-mdrfsconv.py  run-poisson.py  run-stepphase.py
